# ica-cli

./: .gitignore  CLI.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agent/: SKILL.md  skill.json
.agent/examples/: playbooks.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  package-skill.yml  release.yml
ica_cli/: __init__.py  __main__.py  auth_store.py  authenticator.py  cli.py  const.py  credentials_util.py  errors.py  exit_codes.py  handla_browser_login.py  handla_cart.py  handla_web_store.py  http_requests.py  ica_api.py  icatypes.py  parse_summary.py  paths.py  recipe_util.py
scripts/: generate-skill-manifest.py  package-skill.py
tests/: test_cli_list.py  test_cli_login.py  test_handla_browser_login.py  test_handla_cart.py  test_handla_web_store.py  test_recipe_util.py
