[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ica-cli"
version = "0.2.0"
description = "Unofficial CLI for ICA shopping lists and recipes"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "requests>=2.31.0",
  "PyJWT>=2.8.0",
  "html2text>=2024.2.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
handla-browser = ["playwright>=1.40.0"]

[project.scripts]
ica = "ica_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["ica_cli"]
